Fields on the settings tab of the Templates screen are no longer collapsable.

--- a/thunderchild/static/thunderchild/css_src/create_edit_entry.less
+++ b/thunderchild/static/thunderchild/css_src/create_edit_entry.less
@@ -1,48 +1,16 @@
 .field_holder {
-  padding-left:10px;
-  padding-right:20px;
+  padding:0 20px 0 10px;
   margin:6px 0px 0px 0px;
-}
-.field_label_holder {
-  padding:5px 10px 0px 8px;
-  label, p {
-      margin:0;
-      padding:0;
-      font-weight: bold;
-      cursor:default;
-      .user-select(none);
-  }
-  label {
-    width:auto;
-    display:inline-block;
-  }
-  .required {
-    color:red;
-    font-weight: bold;
-  }
-  .alert-error {
-      margin-top:10px;
-  }
 }
 .accordion-group {
     background:@groupBackgroundColor;
     border-color:@groupBorderColor;
     margin-bottom: 6px;
-    ul {
-        margin:0px 0px 5px 0px;
-        padding:0;
-        display:inline-block;
-        list-style:none;
-        li {
-            float:left;
-            margin-right:10px;
-            label {
-                margin:0;
-                input {
-                    margin: 0 2px 4px 0;
-                }
-            }
-        }
+    .field_label_holder {
+      padding:5px 10px 0px 8px;
+      .alert-error {
+          margin-top:10px;
+      }
     }
 }
 #categories {
