--- a/thunderchild/static/thunderchild/css_src/templates.less
+++ b/thunderchild/static/thunderchild/css_src/templates.less
@@ -106,11 +106,6 @@
       top:30px;
       bottom:0;
     }
-    #settings-pane {
-      .field-holder {
-        float:left;
-      }
-    }
   }
 }
 #preview-link-holder {
