--- a/thunderchild/static/thunderchild/css_src/thunderchild.less
+++ b/thunderchild/static/thunderchild/css_src/thunderchild.less
@@ -15,6 +15,42 @@ body {
 textarea{
   resize: none;
 }
+.required {
+  color:red;
+  font-weight:bold;
+}
+.field-holder, .field_holder {
+  padding:5px 0;
+  ul {
+      margin:0px 0px 5px 0px;
+      padding:0;
+      display:inline-block;
+      list-style:none;
+      li {
+          float:left;
+          margin-right:10px;
+          label {
+              margin:0;
+              input {
+                  margin: 0 2px 4px 0;
+              }
+          }
+      }
+  }
+}
+.field_label_holder {
+  label, p {
+      margin:0;
+      padding:0;
+      font-weight: bold;
+      cursor:default;
+      .user-select(none);
+  }
+  label {
+    width:auto;
+    display:inline-block;
+  }
+}
 .modal {
   form {
     margin:0;
